--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -13,8 +13,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/crime_title_hint"
-      android:paddingLeft="16dp"
-      android:paddingRight="16dp"/>
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"/>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -24,13 +24,13 @@
       android:id="@+id/crime_date"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingLeft="16dp"
-      android:paddingRight="16dp"/>
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"/>
   <CheckBox
       android:id="@+id/crime_solved"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingLeft="16dp"
-      android:paddingRight="16dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
       android:text="@string/crime_solved_label"/>
 </LinearLayout>
